--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@vercel/kv": "^1.0.1",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "recipe-scraper": "^2.1.1"
   },
   "devDependencies": {
     "@types/node": "^20",
